# blog-resources

./: .gitmodules  README.md
2020-02-05-lazy-eager-instantiation/: Instantiation.hs
2020-03-12-expl-spec/: Specificity.idr
2024-09-26-typescript-effect/: package-lock.json  package.json
2024-09-26-typescript-effect/src/: index.html  index.ts  styles.scss
TEMPORARY-topiary-tutorial-part-1/tree-sitter-yolo/: CMakeLists.txt  Package.swift  go.mod  package.json  pyproject.toml  setup.py  topiary-yolo.ncl  tree-sitter.json
TEMPORARY-topiary-tutorial-part-1/tree-sitter-yolo/bindings/go/: binding.go  binding_test.go
TEMPORARY-topiary-tutorial-part-1/tree-sitter-yolo/bindings/node/: binding.cc
TEMPORARY-topiary-tutorial-part-1/tree-sitter-yolo/bindings/python/tests/: test_binding.py
TEMPORARY-topiary-tutorial-part-1/tree-sitter-yolo/bindings/rust/: build.rs  lib.rs
TEMPORARY-topiary-tutorial-part-1/tree-sitter-yolo/bindings/swift/TreeSitterYoloTests/: TreeSitterYoloTests.swift
bash-test-dummy/: .gitignore  README.md  bash-test-dummy.sh  visualise.R
buildkite-for-nix-ci/: google_compute_instance.tf  nix_cache.tf  nixos-config.nix  nixos_image_custom.tf  secrets.tf  service_account.tf
buildkite-for-nix-ci/files/: buildkite_nixos_startup.sh
ill-formedness-indicators/variadic-mkvec/: README.md  shell.nix  variadic-mkvec.cabal
ill-formedness-indicators/variadic-mkvec/src/Data/: Vec.hs
ill-formedness-indicators/variadic-mkvec/src/Data/Vec/LiteralSyntax/: Enclosed.hs  EnclosedOI.hs  EnclosedUnguarded.hs  Sentinel.hs  SentinelUnguarded.hs
ill-formedness-indicators/variadic-mkvec/test/: EmitWarnings.hs  Test1.hs  Test2.hs  accept  check  expected-warnings.txt
image-transition/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json  transitions.ts  useAssets.ts
launchdarkly-svelte-sdk-intro/: .env.example  README.md  package.json  svelte.config.js
launchdarkly-svelte-sdk-intro/src/: movies.json
launchdarkly-svelte-sdk-intro/src/lib/: LoadingSpinner.svelte  MovieCard.svelte  MoviesSmartAssistant.svelte  SearchBar.svelte  model.ts
launchdarkly-svelte-sdk-intro/src/routes/: +layout.svelte  (+1 more)
mcmc-intro/: mcmc_introduction.ipynb  requirements.txt  shell.nix
monad-bayes-series/: README.md  flake.nix  haskell-overlay.nix  monad-bayes-1-first-steps.ipynb  monad-bayes-3-bayesian-neural-network.ipynb  monad-bayes-4-inference-representations.ipynb  monad-bayes.ipynb  shell.nix
monad-bayes-series/flakes-old/: haskell-overlay.nix  shell.nix
monad-bayes-series/kernels/: haskell.nix
nix-ppl/: pymc3_linear_regression.py  shell.nix
profiling/: .gitignore  Main.hs  Makefile  README.md  default.nix  example.cabal  release.nix  shell.nix  stack.yaml
recursion-schemes-in-rust/: Cargo.toml  README.md
recursion-schemes-in-rust/src/: lib.rs
three-is-not-a-type/: ThreeIsNotAType.hs
topiary-tutorial-part-1/tree-sitter-yolo/: Cargo.toml  Makefile  binding.gyp  grammar.js  mangled.yolo  package.json  test.yolo  yolo.scm
topiary-tutorial-part-1/tree-sitter-yolo/bindings/c/: tree-sitter-yolo.pc.in
topiary-tutorial-part-1/tree-sitter-yolo/bindings/python/tree_sitter_yolo/: __init__.py  binding.c
topiary-tutorial-part-1/tree-sitter-yolo/bindings/swift/TreeSitterYolo/: yolo.h
topiary-tutorial-part-2/tree-sitter-yolo/: CMakeLists.txt  topiary-yolo.ncl  tree-sitter.json  yolo.scm
