[package]
name = "tree-sitter-yolo"
description = "A tree-sitter parser for the Yolo programming language"
version = "0.1.0"
authors = ["Yann Hamdaoui <yann.hamdaoui@tweag.io>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yolo"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-yolo"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
